--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -19,7 +19,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary pull-right" data-dismiss="modal" ng-click="extra.importDataSeries()">{{ i18n.__('Duplicate') }}</button>
+            <button type="button" class="btn btn-primary pull-right" data-dismiss="modal" ng-disabled="!extra.selectedDataSeries" ng-click="extra.importDataSeries()">{{ i18n.__('Import') }}</button>
             <button type="button" class="btn btn-primary pull-left" data-dismiss="modal">{{ i18n.__('Cancel') }}</button>
           </div>
         </div>
