--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -38,7 +38,7 @@
           <ul class="sidebar-menu custom-scrollbar-light">
             <div id="terrama2-layerexplorer"></div>
             <li class="header" style="color: #b8c7ce;">
-              VISIBLE LAYERS
+              <span data-i18n="VISIBLE LAYERS"></span>
               <span id="visible-layers-extent" class="pull-right" style="font-size: 15px; cursor: pointer;">
                 <i class="glyphicon glyphicon-resize-full"></i>
               </span>
@@ -290,6 +290,9 @@
     <script type="text/javascript" src="{[ BASE_URL ]}externals/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}externals/admin-lte/dist/js/app.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}externals/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/i18next/i18next.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/jquery-i18next/jquery-i18next.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/i18next-xhr-backend/i18nextXHRBackend.min.js"></script>
     <script>
       var BASE_URL = "{[ BASE_URL ]}";
       var webadminHostInfo = {[webadminHostInfo|json|safe]};
