--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -240,6 +240,7 @@
                     name="legendAttributeMo"
                     ng-model="ctrl.legend_attribute_mo"
                     ng-pattern="ctrl.regexColumn"
+                    ng-blur="ctrl.getColumnValues()"
                     ng-required="ctrl.dataSeriesType === 'ANALYSIS_MONITORED_OBJECT'"
                     list='tableColumnsList'>
               <span class="help-block"
@@ -296,7 +297,7 @@
               <div ng-class="{'col-md-5 terrama2-min-padding': !ctrl.alert.hasView, 'col-md-3 terrama2-min-padding': ctrl.alert.hasView}">
                 <div ng-show="!level.isDefault" class="form-group" ng-class="{'has-error': ctrl.legendLevelValueError[level._id] || ctrl.legendLevelOrderError}">
                   <label><span ng-bind="i18n.__('Legend Value')"></span>:</label>
-                  <input class="form-control" name="levelValue{{ level._id }}" ng-model="level.value" type="number" placeholder="{{ i18n.__('Legend Value') }}">
+                  <input class="form-control" name="levelValue{{ level._id }}" ng-model="level.value" type="number" list="tableColumnValues" placeholder="{{ i18n.__('Legend Value') }}">
                 </div>
               </div>
               <div ng-if="ctrl.alert.hasView" class="col-md-4 terrama2-nopadding-box">
@@ -589,6 +590,10 @@
 
   <datalist id='tableColumnsList'>
     <option ng-repeat="column in ctrl.columnsList" value="{{column}}">
+  </datalist>
+
+  <datalist id='tableColumnValues'>
+    <option ng-repeat="value in ctrl.columnValues" value="{{value}}">
   </datalist>
 </div>
 {% endblock %}
