--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -77,7 +77,7 @@
           <div id="terrama2-map" class="terrama2-map cursor-move">
             <div id="legend-box" class="hidden">
               <div class="legend-header"><span data-i18n="Legends"></span><span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
-              <div class="legend-body"><strong data-i18n="No data to show."></strong></div>
+              <div class="legend-body"><strong data-i18n="NO-DATA"></strong></div>
             </div>
             <div id="layer-toolbox" class="custom-scrollbar-dark hidden">
               <div class="layer-toolbox-header"><span class="layer-name"></span><span class="btn btn-default"><i class="fa fa-close"></i></span></div>
@@ -101,7 +101,7 @@
                     </div>
                   </div>
                   <div style="display: block;" class="box-body">
-                    <div role="group" aria-label="Animation controls" style="text-align: center;">
+                    <div role="group" data-i18n="[aria-label]Animation controls" style="text-align: center;">
                       <button id="reload" type="button"><i class="fa fa-repeat"></i></button>
                       <button id="play" type="button"><i class="fa fa-play"></i></button>
                       <button id="pause" type="button"><i class="fa fa-pause"></i></button>
@@ -134,7 +134,7 @@
                         <span></span>
                         <div class="progress progress-sm active hidden">
                           <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                            <span class="sr-only">0% Complete</span>
+                            <span class="sr-only" data-i18n="0% Complete"></span>
                           </div>
                         </div>
                       </div>
@@ -182,9 +182,9 @@
                   <div class="col-md-12">
                     <hr style="margin: 17px 0 10px 0;"/>
                     <div id="languages-div">
-                      <img id="language-pt" src="{[ BASE_URL ]}images/pt.png"/>
-                      <img id="language-es" src="{[ BASE_URL ]}images/es.png"/>
-                      <img id="language-en" src="{[ BASE_URL ]}images/en.png"/>
+                      <img id="language-pt" src="{[ BASE_URL ]}images/pt.png" title="Português"/>
+                      <img id="language-es" src="{[ BASE_URL ]}images/es.png" title="Español"/>
+                      <img id="language-en" src="{[ BASE_URL ]}images/en.png" title="English"/>
                     </div>
                   </div>
                 </div>
@@ -218,7 +218,7 @@
               <div class="main-div hidden">
                 <span id="tableCloseButton"><i class="fa fa-close"></i></span>
                 <div id="attributes-table-select">
-                  <span data-i18n="Layers:"></span>
+                  <span data-i18n="LAYERS-COLON"></span>
                   <select class="form-control"></select>
                 </div>
                 <div style="clear: both; height: 5px;"></div>
@@ -271,7 +271,7 @@
       <footer class="main-footer"></footer>
       <footer class="footer-monitor"></footer>
     </div>
-    <div id="about-dialog" title="About">
+    <div id="about-dialog">
       <div id="programa-cerrado-image"></div>
       <p>
         <span class="about-title" data-i18n="[html]Project <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)"></span>
@@ -303,6 +303,7 @@
       var webadminHostInfo = {[webadminHostInfo|json|safe]};
       var webmonitorHostInfo = {[webmonitorHostInfo|json|safe]};
       var message = "{[message.content]}";
+      var defaultLanguage = "{[ userLocale | 'en' ]}";
     </script>
     <script type="text/javascript" src="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.js"></script>
     <!--<script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}externals/requirejs/require.js"></script>-->
