applying translations and creating a properties tool

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -93,6 +93,16 @@
                   <div style="display: none;" class="box-body"></div>
                 </div>
 
+                <div class="box box-default box-solid collapsed-box layer-properties">
+                  <div class="box-header with-border">
+                    <h3 class="box-title" data-i18n="Properties"></h3>
+                    <div class="box-tools pull-right">
+                      <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i></button>
+                    </div>
+                  </div>
+                  <div style="display: none;" class="box-body"></div>
+                </div>
+
                 <div id="animate-layer-box" class="box box-default box-solid hidden">
                   <div class="box-header with-border">
                     <h3 class="box-title" data-i18n="Animation"></h3>
@@ -111,24 +121,24 @@
                   </div>
                 </div>
 
-                <div id="slider-box" class="box box-default box-solid">
+                <div id="slider-box" class="box box-default box-solid collapsed-box">
                   <div class="box-header with-border">
                     <h3 class="box-title" data-i18n="Opacity"></h3>
                     <div class="box-tools pull-right">
-                      <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                      <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i></button>
                     </div>
                   </div>
-                  <div style="display: block;" class="box-body"></div>
+                  <div style="display: none;" class="box-body"></div>
                 </div>
 
-                <div id="exportation-box" class="box box-default box-solid">
+                <div id="exportation-box" class="box box-default box-solid collapsed-box">
                   <div class="box-header with-border">
                     <h3 class="box-title" data-i18n="Exportation"></h3>
                     <div class="box-tools pull-right">
-                      <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                      <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i></button>
                     </div>
                   </div>
-                  <div style="display: block;" class="box-body">
+                  <div style="display: none;" class="box-body">
                     <div id="exportation-status" class="hidden">
                       <div>
                         <span></span>
