Connection to the database

--- a/websql/views/index.ejs
+++ b/websql/views/index.ejs
@@ -9,7 +9,9 @@
         <div id="query">
             <div>Inserir Query</div>
             <textarea type="text" id="querybox"></textarea>
+            <button id="submit">Submit</button>
         </div>
+        
         <div id="layers">
             <div>Camadas</div>
         </div>
