--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -177,7 +177,7 @@
                 <img ng-src="{{ctrl.getImageUrl($select.selected)}}" style="max-width: 20px; height: 20px; margin-top: -9px"/>
                 <span ng-bind="$select.selected.name"></span>
               </ui-select-match>
-              <ui-select-choices repeat="dSeries.id as dSeries in (ctrl.dataSeries | filter:ctrl.filterByType | orderBy: 'name') track by dSeries.id">
+              <ui-select-choices repeat="dSeries.id as dSeries in (ctrl.dataSeries | filter:ctrl.filterByType | filter: {'name': $select.search} | orderBy: 'name') track by dSeries.id">
                 <img ng-src="{{ctrl.getImageUrl(dSeries)}}" style="max-width: 20px; height: 20px;"/>
                 <span ng-bind="dSeries.name"></span>
               </ui-select-choices>
