Data series registration layout adjusts, general box to provider and project registration

--- a/webapp/public/javascripts/angular/data-series/templates/csvFormat.html
+++ b/webapp/public/javascripts/angular/data-series/templates/csvFormat.html
@@ -1,5 +1,5 @@
 
-<div class="col-md-12">
+<div class="col-md-12 terrama2-nopadding-box">
 
   <div class="col-md-3">
     <div class="form-group" terrama2-show-errors>
@@ -37,7 +37,7 @@
 </div>
 
 
-<div class="col-md-12">
+<div class="col-md-12 terrama2-nopadding-box">
   <div class="col-md-12">
     <div class="form-group">
       <label ng-bind="$ctrl.i18n.__('Attributes to be Converted')+':'"></label>
@@ -46,7 +46,7 @@
   </div>
 </div>
 
-<div class="col-md-12">
+<div class="col-md-12 terrama2-nopadding-box">
   <div class="col-md-12">
     <div class="form-group">
       <button class="btn btn-default" ng-click="$ctrl.addField()"> {{$ctrl.i18n.__('Add')}}</button>
