--- a/webapp/public/javascripts/angular/data-series/templates/intersection.html
+++ b/webapp/public/javascripts/angular/data-series/templates/intersection.html
@@ -136,7 +136,7 @@
   <div class="col-md-12">
     <div class="col-md-12">
       <form name="forms.intersectionForm">
-        <div class="col-md-12">
+        <div class="col-md-12 terrama2-nopadding-box">
           <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#dataSeriesModal" style="margin-bottom: 15px">
             <i class="fa fa-plus"></i>
           </button>
